crates/rapport/tests/snapshots/cargo_fail_clippy_warning_lint.snap
---
source: crates/rapport/tests/cargo_e2e.rs
expression: result.snapshot()
---
exit: 1
stdout:
---
(empty)
stderr:
---
## Output

```
Checking clippy_warning v0.1.0 ([project])
error: unneeded `return` statement
 --> src/lib.rs:2:5
  |
2 |     return value;
  |     ^^^^^^^^^^^^
  |
  = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-[version]/index.html#needless_return
  = note: `-D clippy::needless-return` implied by `-D warnings`
  = help: to override `-D warnings` add `#[allow(clippy::needless_return)]`
help: remove `return`
  |
2 -     return value;
2 +     value
  |

error: could not compile `clippy_warning` ([cargo-target]) due to 1 previous error
```

status: FAIL
duration: [duration]

## Next

└ run rapport fix [project]
