crates/rapport/tests/snapshots/cargo_fail_compile_error_build.snap
---
source: crates/rapport/tests/cargo_e2e.rs
expression: result.snapshot()
---
exit: 1
stdout:
---
(empty)
stderr:
---
## Output

```
Checking compile_error v0.1.0 ([project])
error[E0308]: mismatched types
 --> src/lib.rs:2:5
  |
1 | pub fn broken() -> u8 {
  |                    -- expected `u8` because of return type
2 |     "not a number"
  |     ^^^^^^^^^^^^^^ expected `u8`, found `&str`

For more information about this error, try `rustc --explain E0308`.
error: could not compile `compile_error` ([cargo-target]) due to 1 previous error
```

status: FAIL
duration: [duration]

## Next

└ run rapport lint [project]
