crates/rapport/tests/snapshots/cargo_fail_doc_error_audit.snap
---
source: crates/rapport/tests/cargo_e2e.rs
expression: result.snapshot()
---
exit: 1
stdout:
---
(empty)
stderr:
---
## Output

```
Documenting doc_error v0.1.0 ([project])
error: unresolved link to `MissingType`
 --> src/lib.rs:3:11
  |
3 | /// See [`MissingType`].
  |           ^^^^^^^^^^^ no item named `MissingType` in scope
  |
  = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`
note: the lint level is defined here
 --> src/lib.rs:1:9
  |
1 | #![deny(rustdoc::broken_intra_doc_links)]
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not document `doc_error`
```

status: FAIL
duration: [duration]

## Next

└ run rapport validate [project]
