crates/rapport/tests/snapshots/cargo_fail_failing_test_validate.snap
---
source: crates/rapport/tests/cargo_e2e.rs
expression: result.snapshot()
---
exit: 1
stdout:
---
(empty)
stderr:
---
## Output

```
Compiling failing_test v0.1.0 ([project])
    Finished `test` profile [unoptimized + debuginfo] target(s) in [duration]
     Running unittests src/lib.rs ([target]/debug/deps/failing_test-[hash])
error: test failed, to rerun pass `--lib`

running 1 test
test tests::expects_the_answer ... FAILED

failures:

---- tests::expects_the_answer stdout ----

thread 'tests::expects_the_answer' panicked at src/lib.rs:11:9:
assertion `left == right` failed
  left: 41
 right: 42
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace


failures:
    tests::expects_the_answer

test result: FAILED. 0 passed; 1 failed; 0 ignored; 0 measured; 0 filtered out; finished in [duration]
```

status: FAIL
duration: [duration]

## Next

└ run rapport lint [project]
└ run rapport build [project]
└ run rapport test [project]
