crates/rapport/tests/snapshots/cargo_fail_missing_project_build.snap
---
source: crates/rapport/tests/cargo_e2e.rs
expression: result.snapshot()
---
exit: 2
stdout:
---
(empty)
stderr:
---
You ran: rapport build [project]
[project] has no supported project between it and git root [project].

## Next

└ run rapport help build
