crates/rapport/tests/snapshots/cargo_missing_cargo_on_path.snap
---
source: crates/rapport/tests/cargo_e2e.rs
expression: result.snapshot()
---
exit: 2
stdout:
---
(empty)
stderr:
---
You ran: rapport build [project]
Failed to invoke cargo: No such file or directory (os error 2)

## Next

└ run which cargo
